Bug 69194 - [5/6 Regression] internal compiler error: in extract_insn, at recog.c:2286
Summary: [5/6 Regression] internal compiler error: in extract_insn, at recog.c:2286
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 6.0
: P3 normal
Target Milestone: 5.4
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2016-01-08 11:51 UTC by kugan
Modified: 2020-09-02 16:34 UTC (History)
1 user (show)

See Also:
Host:
Target: arm
Build:
Known to work:
Known to fail: 5.3.1, 6.0
Last reconfirmed: 2016-01-08 00:00:00


Attachments
testcase (4.19 KB, text/plain)
2016-01-08 11:51 UTC, kugan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kugan 2016-01-08 11:51:17 UTC
Created attachment 37271 [details]
testcase

Attached testcase ICE with:

t.C: In function ‘crashes do_crash(Table, Points)’:
t.C:504:1: error: unrecognizable insn:
 }
 ^

(insn 27 26 28 4 (set (reg:V4SF 123)
        (unspec:V4SF [
                (mem/c:V4SF (reg/f:SI 104 virtual-incoming-args) [0 MEM[(const float[4] *)&p]+0 S16 A32])
            ] UNSPEC_VLD1)) t.C:31 -1
     (nil))

command line options:arm-none-linux-gnueabi-g++  -O2 -mfpu=neon -S  -Wno-deprecated-declarations t.C

gcc -v:

Using built-in specs.
COLLECT_GCC=/home/kugan/work/builds/gcc-fsf-gcc/tools/bin/arm-none-linux-gnueabi-gcc
COLLECT_LTO_WRAPPER=/home/kugan/work/builds/gcc-fsf-gcc/tools/libexec/gcc/arm-none-linux-gnueabi/6.0.0/lto-wrapper
Target: arm-none-linux-gnueabi
Configured with: /home/kugan/work/sources/gcc-fsf/gcc/configure --target=arm-none-linux-gnueabi --prefix=/home/kugan/work/builds/gcc-fsf-gcc/tools --with-sysroot=/home/kugan/work/builds/gcc-fsf-gcc/sysroot-arm-none-linux-gnueabi --disable-libssp --disable-libgomp --disable-libmudflap --enable-languages=c,c++ --with-arch=armv7-a --with-fpu=vfpv3-d16 --with-float=softfp --with-thumb
Thread model: posix
gcc version 6.0.0 20151231 (experimental) (GCC)
Comment 1 ktkachov 2016-01-08 12:07:06 UTC
Confirmed on trunk and 5 branch.
4.9 doesn't build for language-level issues (different intrinsics implementation back then or something)
-O2 -std=gnu++11 -mfpu=neon -S  -w -mfloat-abi=softfp
is needed. -mfloat-abi=hard doesn't ICE
Comment 2 kugan 2016-01-12 00:41:26 UTC
Author: kugan
Date: Tue Jan 12 00:40:54 2016
New Revision: 232251

URL: https://gcc.gnu.org/viewcvs?rev=232251&root=gcc&view=rev
Log:
gcc/ChangeLog:

2016-01-12  Kugan Vivekanandarajah  <kuganv@linaro.org>
	    Jim Wilson  <jim.wilson@linaro.org>

	PR target/69194
	* config/arm/arm-builtins.c (arm_expand_neon_args): Call
	copy_to_mode_reg instead of force_reg.

gcc/testsuite/ChangeLog:

2016-01-12  Kugan Vivekanandarajah  <kuganv@linaro.org>
	    Jim Wilson  <jim.wilson@linaro.org>

	PR target/69194
	* gcc.target/arm/pr69194.c: New test.


Added:
    trunk/gcc/testsuite/gcc.target/arm/pr69194.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/arm/arm-builtins.c
    trunk/gcc/testsuite/ChangeLog
Comment 3 Nick Clifton 2016-01-14 11:31:06 UTC
The patch checked in fixes this PR.
Comment 4 ktkachov 2016-01-14 11:32:40 UTC
(In reply to Nick Clifton from comment #3)
> The patch checked in fixes this PR.

I think this still needs a backport to GCC 5 though
Comment 5 kugan 2016-01-14 11:34:51 UTC
Thanks for the reminder. I will commit the back-port today. I wanted leave few days in the trunk before doing.
Comment 6 kugan 2016-01-17 02:45:18 UTC
Author: kugan
Date: Sun Jan 17 02:44:26 2016
New Revision: 232481

URL: https://gcc.gnu.org/viewcvs?rev=232481&root=gcc&view=rev
Log:
2016-01-17  Kugan Vivekanandarajah  <kuganv@linaro.org>

	Backport from mainline
	2016-01-12  Kugan Vivekanandarajah  <kuganv@linaro.org>
		    Jim Wilson  <jim.wilson@linaro.org>

	PR target/69194
	* config/arm/arm-builtins.c (arm_expand_neon_args): Call
	copy_to_mode_reg instead of force_reg.

2016-01-17  Kugan Vivekanandarajah  <kuganv@linaro.org>

	Backport from mainline
	2016-01-12  Kugan Vivekanandarajah  <kuganv@linaro.org>
		    Jim Wilson  <jim.wilson@linaro.org>

	PR target/69194
	* gcc.target/arm/pr69194.c: New test.


Added:
    branches/gcc-5-branch/gcc/testsuite/gcc.target/arm/pr69194.c
Modified:
    branches/gcc-5-branch/gcc/ChangeLog
    branches/gcc-5-branch/gcc/config/arm/arm-builtins.c
    branches/gcc-5-branch/gcc/testsuite/ChangeLog
Comment 7 Jonathan Wakely 2020-09-02 16:16:35 UTC Comment hidden (obsolete)